# file_share_api

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: depends.py  main.py
app/crud/: user.py
app/db/: base.py  connection.py  models.py
app/db/models/: __init__.py  files.py  folders.py  storageByUser.py  storagePlans.py  user.py
app/routes/: user.py
app/schemas/: user.py
migration/: env.py
migration/versions/: 409054e10bb6_create_user_table.py  c00f840f6fc9_create_tables.py
